--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                   />
                   <label for="email" class="form__label">Email address</label>
                 </div>
-                <div class="form__group">
+                <div class="form__group u-margin-bottom-medium">
                   <div class="form__radio-group">
                     <input
                       type="radio"
@@ -353,12 +353,55 @@
                     >
                   </div>
                 </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
               </form>
             </div>
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built my <a href="#" class="footer__link">Jonas Schmedtmann</a> for
+            his online course
+            <a href="#" class="footer__link">Advance CSS and Sass</a>. Copyright
+            &copy; by Jonas Schmedtmann. You are 100% allowed to use this
+            webpage for both personal and commercial use, but NOT to claim it as
+            your own desing. A credit to the original author, Jonas Schmedtmann,
+            is of course highly appreciated!
+          </p>
+        </div>
+      </div>
+    </footer>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
